--- a/src/components/Contact/ContactSection.css
+++ b/src/components/Contact/ContactSection.css
@@ -56,6 +56,12 @@ input, textarea {
     width: 100%;
     padding: 8px;
     margin-bottom: 26px;
+    border: 1px solid #ccc;
+    border-radius: 6px;
+    color: #ccc;
+  }
+  input::placeholder, textarea::placeholder{
+    color: #ccc;
   }
   .submitContact{
     background-color: #395967;
