--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,21 +1,19 @@
 footer{
-    /* background-color: #2d2e32; */
-    padding: 5rem 0;
-    width: 100%;
+  padding: 5rem 0;
+  width: 100%;
 }
 
 .containerFooter{
-    margin: 0 auto;
-    max-width: 107rem;
-    padding: 0 4rem;
+  margin: 0 auto;
+  max-width: 107rem;
+  padding: 0 4rem;
 }
 
-.helloIci{
+.linkToContactPage{
   text-decoration: none;
-  font-weight: bold;
 }
 
-.nameCopy{
+.copyrightText{
   display: flex;
 }
 
@@ -25,28 +23,9 @@ footer{
 }
 
 .footerc{
-    align-items: center;
-    display: flex;
-    justify-content: space-between;
-}
-
-@media (max-width: 767px) {
-  .footerc {
-    display: flex;
-    flex-direction: column-reverse;
-    gap: 3rem;
-    text-align: center;
-  }
-  .sepration{
-    display: none;
-  }
-  .nameCopy{
-    display: grid;
-    gap: 1rem;
-  }
-  footer{
-    padding: 1rem 2rem 5rem;
-  }
+  align-items: center;
+  display: flex;
+  justify-content: space-between;
 }
 
 .footerc h3{
@@ -69,54 +48,24 @@ footer{
 
 .footerc__socials a:hover{
     color: #C4C4C4;
-    transform: scale(1.2);
     transition: all .2s ease-in-out;
 }
 
-
-
-
-
-
-
-/* footer {
-    background-color: #2d2e32;
-    padding: 5rem 0;
-    width: 100%;
-  
-    h3 {
-      font-size: $text-size;
-      color: white;
-    }
-  }
-  
+@media (max-width: 767px) {
   .footerc {
     display: flex;
-    justify-content: space-between;
-    align-items: center;
-  
-    @media (max-width: 550px) {
-      flex-wrap: wrap;
-      justify-content: center;
-      gap: 2rem;
-      text-align: center;
-    }
-  
-    &__socials {
-      display: flex;
-      gap: 2rem;
-      align-items: center;
-      justify-content: center;
-      margin-top: 1rem;
-  
-      a {
-        font-size: 2.3rem;
-        color: white;
-  
-        &:hover {
-          transform: scale(1.2);
-          transition: all 0.2s ease-in-out;
-        }
-      }
-    }
-  } */
+    flex-direction: column-reverse;
+    gap: 3rem;
+    text-align: center;
+  }
+  .sepration{
+    display: none;
+  }
+  .copyrightText{
+    display: grid;
+    gap: 1rem;
+  }
+  footer{
+    padding: 1rem 2rem 5rem;
+  }
+}
