--- a/src/components/Loading/Loading.css
+++ b/src/components/Loading/Loading.css
@@ -7,7 +7,7 @@
 
 .loader {
   border-radius: 50%;
-  border: 4px solid #395967;
+  border: 4px solid var(--main-blue-button);
   border-left-color: transparent;
   width: 36px;
   height: 36px;
